[gd_scene load_steps=32 format=3 uid="uid://blnjmna71025t"]

[ext_resource type="Script" uid="uid://bqud0bqb2dq15" path="res://scripts/UI_Scripts/select_level.gd" id="1_adu0t"]
[ext_resource type="Shader" uid="uid://bjp3bnqe1dxkr" path="res://scenes/SelectLevel.gdshader" id="2_yku54"]
[ext_resource type="Texture2D" uid="uid://1dty4wpdee3m" path="res://assets/Jungle Asset Pack/new_window_2d.tres" id="3_bsgdq"]
[ext_resource type="Texture2D" uid="uid://8gsfsmx8fv71" path="res://assets/Jungle Asset Pack/parallax background/unnamed.jpg" id="3_fl6s6"]
[ext_resource type="Texture2D" uid="uid://jeehyp7hpqns" path="res://assets/Jungle Asset Pack/parallax background/Window.png" id="4_i1mc2"]
[ext_resource type="FontFile" uid="uid://d081marsgcthd" path="res://assets/Jungle Asset Pack/Pixeled.ttf" id="5_mcxre"]
[ext_resource type="Texture2D" uid="uid://cumn5lgfm4a26" path="res://assets/Jungle Asset Pack/parallax background/Screenshot 2025-10-17 152747.png" id="6_yku54"]
[ext_resource type="Texture2D" uid="uid://dakrd3uqsu42m" path="res://assets/Jungle Asset Pack/parallax background/Button.png" id="8_4hu3u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vtqlk"]
shader = ExtResource("2_yku54")
shader_parameter/speed = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_mcxre"]
atlas = ExtResource("3_bsgdq")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_yku54"]
atlas = ExtResource("4_i1mc2")
region = Rect2(1304, 48, 384, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cj5g"]
atlas = ExtResource("8_4hu3u")
region = Rect2(759, 668, 181, 189)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4hu3u"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eqg1o"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vtqlk"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cir3e"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tqpso"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ugusr"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mcxre"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yku54"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qwbve"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kfdx2"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xios8"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3p1c"]
texture = ExtResource("6_yku54")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bpt75"]
texture = ExtResource("6_yku54")

[sub_resource type="AtlasTexture" id="AtlasTexture_bsgdq"]
atlas = ExtResource("8_4hu3u")
region = Rect2(197, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hu3u"]
atlas = ExtResource("8_4hu3u")
region = Rect2(810, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_va4dp"]
atlas = ExtResource("8_4hu3u")
region = Rect2(401, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl6s6"]
atlas = ExtResource("8_4hu3u")
region = Rect2(197, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_31p20"]
atlas = ExtResource("8_4hu3u")
region = Rect2(810, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh8bf"]
atlas = ExtResource("8_4hu3u")
region = Rect2(401, 972, 181, 190)

[node name="SelectLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -9.0
offset_right = 18.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adu0t")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_vtqlk")
layout_mode = 1
offset_left = -15.0
offset_top = 13.0
offset_right = 1131.0
offset_bottom = 654.0
texture = ExtResource("3_fl6s6")
expand_mode = 1

[node name="LevelMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -273.5
offset_right = 450.0
offset_bottom = 273.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_mcxre")
expand_mode = 1

[node name="Title" type="TextureRect" parent="LevelMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -266.5
offset_right = 186.0
offset_bottom = -178.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_yku54")

[node name="btnlv1" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 41.0
offset_top = 124.0
offset_right = 185.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_eqg1o")
text = "1"

[node name="btnlv2" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 257.0
offset_top = 124.0
offset_right = 401.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_vtqlk")
text = "2
"

[node name="btnlv3" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 493.0
offset_top = 124.5
offset_right = 637.0
offset_bottom = 236.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_cir3e")
text = "3"

[node name="btnlv4" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 697.0
offset_top = 121.5
offset_right = 841.0
offset_bottom = 233.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_tqpso")
text = "4"

[node name="btnlv5" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 39.0
offset_top = 236.5
offset_right = 183.0
offset_bottom = 348.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_ugusr")
text = "5"

[node name="btnlv6" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 258.0
offset_top = 237.5
offset_right = 402.0
offset_bottom = 349.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_mcxre")
text = "6"

[node name="btnlv7" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 493.0
offset_top = 238.5
offset_right = 637.0
offset_bottom = 350.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_yku54")
text = "7"

[node name="btnlv8" type="Button" parent="LevelMenu"]
layout_mode = 0
<<<<<<< Updated upstream
offset_left = 707.5
offset_top = 242.5
offset_right = 851.5
offset_bottom = 354.5
=======
offset_left = 696.0
offset_top = 235.5
offset_right = 840.0
offset_bottom = 347.5
>>>>>>> Stashed changes
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_qwbve")
text = "8"

[node name="btnlv9" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 39.0
offset_top = 351.5
offset_right = 183.0
offset_bottom = 463.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_kfdx2")
text = "9"

[node name="btnlv10" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 261.0
offset_top = 353.5
offset_right = 405.0
offset_bottom = 465.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_xios8")
text = "10
"

[node name="btnlv11" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 494.0
offset_top = 351.5
offset_right = 638.0
offset_bottom = 463.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_t3p1c")
text = "11
"

[node name="btnlv12" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 696.0
offset_top = 350.5
offset_right = 840.0
offset_bottom = 462.5
theme_override_fonts/font = ExtResource("5_mcxre")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4hu3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_bpt75")
text = "12"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 279.0
offset_right = 655.0
offset_bottom = 837.0
scale = Vector2(0.2, 0.2)
texture_normal = SubResource("AtlasTexture_bsgdq")
texture_pressed = SubResource("AtlasTexture_4hu3u")
texture_hover = SubResource("AtlasTexture_va4dp")
stretch_mode = 0

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 980.0
offset_top = 270.0
offset_right = 1610.0
offset_bottom = 855.0
scale = Vector2(0.2, 0.2)
texture_normal = SubResource("AtlasTexture_fl6s6")
texture_pressed = SubResource("AtlasTexture_31p20")
texture_hover = SubResource("AtlasTexture_sh8bf")
stretch_mode = 0

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
